[package]
name = "geese_executor"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/geese_executor"
readme = "README.md"
description = """
Asynchronous executor with Geese event system integration.
"""

[dependencies]
dummy-waker = "1.1.0"
geese = "0.2.0"
takecell = "0.1.1"